--- a/core_settings.gradle
+++ b/core_settings.gradle
@@ -57,8 +57,8 @@ include modulePrefix + 'lib-datasource'
 project(modulePrefix + 'lib-datasource').projectDir = new File(rootDir, 'libraries/datasource')
 include modulePrefix + 'lib-datasource-cronet'
 project(modulePrefix + 'lib-datasource-cronet').projectDir = new File(rootDir, 'libraries/datasource_cronet')
-//include modulePrefix + 'lib-datasource-rtmp'
-//project(modulePrefix + 'lib-datasource-rtmp').projectDir = new File(rootDir, 'libraries/datasource_rtmp')
+include modulePrefix + 'lib-datasource-rtmp'
+project(modulePrefix + 'lib-datasource-rtmp').projectDir = new File(rootDir, 'libraries/datasource_rtmp')
 include modulePrefix + 'lib-datasource-okhttp'
 project(modulePrefix + 'lib-datasource-okhttp').projectDir = new File(rootDir, 'libraries/datasource_okhttp')
 
