--- a/libraries/extractor/build.gradle
+++ b/libraries/extractor/build.gradle
@@ -15,7 +15,9 @@ apply from: "$gradle.ext.androidxMediaSettingsDir/common_library_config.gradle"
 
 android {
     namespace 'androidx.media3.extractor'
-
+    defaultConfig {
+        minSdkVersion 16
+    }
     buildTypes {
         debug {
             testCoverageEnabled = true
