--- a/libraries/transformer/build.gradle
+++ b/libraries/transformer/build.gradle
@@ -14,7 +14,9 @@
 apply from: "$gradle.ext.androidxMediaSettingsDir/common_library_config.gradle"
 android {
     namespace 'androidx.media3.transformer'
-
+    defaultConfig {
+        minSdkVersion 16
+    }
     defaultConfig {
         minSdkVersion 21
         // The following argument makes the Android Test Orchestrator run its
