--- a/libraries/ui/build.gradle
+++ b/libraries/ui/build.gradle
@@ -17,7 +17,9 @@ android.buildTypes.debug.testCoverageEnabled true
 
 android {
     namespace 'androidx.media3.ui'
-
+    defaultConfig {
+        minSdkVersion 16
+    }
     lint {
         baseline = file("lint-baseline.xml")
     }
