--- a/libraries/cast/build.gradle
+++ b/libraries/cast/build.gradle
@@ -15,7 +15,9 @@ apply from: "$gradle.ext.androidxMediaSettingsDir/common_library_config.gradle"
 
 android {
     namespace 'androidx.media3.cast'
-
+    defaultConfig {
+        minSdkVersion 16
+    }
     publishing {
         singleVariant('release') {
             withSourcesJar()
