--- a/libraries/common/build.gradle
+++ b/libraries/common/build.gradle
@@ -26,7 +26,9 @@ rootProject.allprojects.forEach {
 
 android {
     namespace 'androidx.media3.common'
-
+    defaultConfig {
+        minSdkVersion 16
+    }
     buildTypes {
         debug {
             testCoverageEnabled = true
