--- a/libraries/container/build.gradle
+++ b/libraries/container/build.gradle
@@ -17,6 +17,7 @@ android {
     namespace 'androidx.media3.container'
 
     defaultConfig {
+        minSdkVersion 16
         // The following argument makes the Android Test Orchestrator run its
         // "pm clear" command after each test invocation. This command ensures
         // that the app's state is completely cleared between tests.
