--- a/libraries/decoder_av1/build.gradle
+++ b/libraries/decoder_av1/build.gradle
@@ -17,6 +17,7 @@ android {
     namespace 'androidx.media3.decoder.av1'
 
     defaultConfig {
+        minSdkVersion 16
         externalNativeBuild {
             cmake {
                 // Debug CMake build type causes video frames to drop,
