--- a/libraries/exoplayer_ima/build.gradle
+++ b/libraries/exoplayer_ima/build.gradle
@@ -15,7 +15,9 @@ apply from: "$gradle.ext.androidxMediaSettingsDir/common_library_config.gradle"
 
 android {
     namespace 'androidx.media3.exoplayer.ima'
-
+    defaultConfig {
+        minSdkVersion 16
+    }
     sourceSets {
         androidTest.assets.srcDir '../test_data/src/test/assets'
     }
