--- a/libraries/test_data/build.gradle
+++ b/libraries/test_data/build.gradle
@@ -14,3 +14,8 @@
 apply from: "$gradle.ext.androidxMediaSettingsDir/common_library_config.gradle"
 
 android.namespace 'androidx.media3.test.data'
+android {
+    defaultConfig {
+        minSdkVersion 16
+    }
+}
